[package]
name = "termstart"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "KeyboardEvent",
    "HtmlElement",
    "Window",
    "MediaQueryList",
    "MediaQueryListEvent",
    "Element",
    "DomTokenList",
    "Event",
    "EventTarget",
    "Storage",
    "Location",
    "Navigator",
    "Document",
    "HtmlDocument",
    "Window",
] }
gloo = { version = "0.10", features = ["storage", "net"] }
gloo-storage = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
log = "0.4"
lucide-yew = { version = "2.1.0", features = ["all-icons"] }
js-sys = "0.3"
lazy_static = "1.4"
dotenv = "0.15"
wasm-logger = "0.2"
serde-wasm-bindgen = "0.6"
postgrest = "1.0"
supabase_rs = "0.4.2"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4.0"
futures = "0.3.31"
