[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "time"] }
dotenv = "0.15"
bcrypt = "0.10"
jsonwebtoken = "8.1"
validator = { version = "0.16", features = ["derive"] }
regex = "1.9"
lazy_static = "1.4"
actix-rt = "2.10.0"
